Fix cart sidebar height to ensure full visibility

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header .icon-cart span {
   position: fixed;
   top: 0;
   right: 0;
-  height: 0;
+  height: 100%;
   display: grid;
   grid-template-rows: 70px 1fr 70px;
   transition: 0.5s;
